<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Text1"
        android:textSize="30sp"
        android:background="#64000000"
     />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Text2"
        android:textSize="20sp"
        android:textColor="#ba4545"
    />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Text3"
        android:textSize="20sp"
       android:textColor="#000000"
        android:typeface="serif"
    />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Text3"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="bold|italic"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Text6"
        android:textSize="20sp"
        android:textColor="#000000"
        android:singleLine="true"

        />
</LinearLayout>
