<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="soeonkim.kr.hs.emirim.widgetproperties.MainActivity"
    android:orientation="vertical"
    android:background="#96f5f9b6">
    <!--orientation은 위젯이 두개이상 될때 써줌(방향 결정)-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_str1"
        android:textSize="20sp"
        android:background="#c8f2afaf"
        android:textColor="#000000"
        android:padding="15dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:visibility="visible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_str2"
        android:textSize="20sp"
        android:background="#c8f2afaf"
        android:textColor="#000000"
        android:padding="15dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_str3"
        android:textSize="20sp"
        android:background="#c8f2afaf"
        android:textColor="#000000"
        android:padding="15dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"/>

</LinearLayout>
